# rprob

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_rprob.py
rprob/: __init__.py  rprob.py
rprob.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
