[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rprob"
version = "1.0.3"
description = "A library to use R style probability distribution functions in Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
]

license = { file = "LICENSE" }
authors = [
    { name="Jinwook Chang", email="tranquil_morningl@icloud.com" }
]